--- a/Project/assets/main.qss
+++ b/Project/assets/main.qss
@@ -61,31 +61,30 @@ QLabel#paymentLabel {
   padding: 0px;
 }
 
-/* --- 3. PayLayout --- */
+/* --- 3. payable Layout --- */ 
+
 *[objectName*="PayFrame"] {
-    border: 2px solid blue;
-    border-radius: 8px;
+    background-color: #f4f5f4;  
+    border: 3px solid #7e7f7e;
+    border-radius: 10px;
 }
 
 *[objectName*="TtlPayLabel"],
 *[objectName*="ValPayLabel"] {
     font-family: Tahoma;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 22px;
     color: navy;
 }
 
-*[objectName*="TtlPayLabel"] {
-    background-color: beige;;
-}
 *[objectName*="ValPayLabel"] {
     background-color: white;  
+    border: 3px solid transparent;
+    border-radius: 10px;
 }
 
 /* 4. Payment mode select buttons */
 
 *[objectName*="PaySlcBtn"] {
-  border-radius: 8px;
   padding: 8px 10px;
   border-radius: 8px;
   font-size: 20px;
@@ -95,7 +94,7 @@ QLabel#paymentLabel {
   max-height: 24px;
 }
 
-QPushButton#cashPaySlcBtn    { background-color: #2e7d32;;  color: white;}
+QPushButton#cashPaySlcBtn    { background-color: #2e7d32;  color: white;}
 QPushButton#cashPaySlcBtn:hover { background-color: #256528; }
 QPushButton#cashPaySlcBtn:pressed { background-color: #1b4d1e; }
 QPushButton#netsPaySlcBtn    { background-color: #0a3d91;  color: white;}
@@ -110,44 +109,81 @@ QPushButton#voucherPaySlcBtn:pressed { background-color: #b89628; }
 
 
 /* 5. Operation buttons */
-#payPayOpsBtn    { background-color: #1976D2; color: white; font-Size: 18px;}  
-#printPayOpsBtn  { background-color: #0288D1; color: white; font-Size: 18px; } 
-#resetPayOpsBtn  { background-color: #D32F2F; color: white; font-Size: 18px; }
+#payPayOpsBtn    { background-color: #4CAF50; color: white; font-Size: 18px;}  
+#printPayOpsBtn  { background-color: #2196F3; color: white; font-Size: 18px; } 
+#resetPayOpsBtn  { background-color: #F44336; color: white; font-Size: 18px; }
 
 #payPayOpsBtn, #printPayOpsBtn, #resetPayOpsBtn {
-    min-width: 120px;
-    min-height: 60px;
-    max-width: 120px;
-    max-height: 60px;
-    border-radius: 8px;
-}
-
-/* 6. Keypad */
-#keypadFrame QPushButton {
-    min-width: 80px;
-    max-width: 80px;
+    min-width: 130px;
     min-height: 80px;
+    max-width: 130px;
     max-height: 80px;
-    font-size: 18px;
     border-radius: 8px;
 }
 
-/* Numbers / decimals / 00 */
-*[objectName*="keyNumBtn"] {   /* or objectName*="num" / "00" / "decimal" */
-    background-color: #B0BEC5;
-    color: white;
+/* 6. tender */
+
+*[objectName*="TtlLabel"],
+*[objectName*="ValLineEdit"] {
+    font-family: Tahoma;
+    font-size: 18px;
+    font-weight: bold;
+    color: navy;
 }
 
-/* Fast actions: enter, backspace, tab, clear */
+*[objectName*="ValLineEdit"] {
+    background-color: white;
+    border: 1px solid #333333; 
+    border-radius: 8px; 
+}
+
+/* 7. Keypad */
+#keypadFrame QPushButton {
+    min-width: 110px;
+    max-width: 110px;
+    min-height: 90px;
+    max-height: 90px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 8px;
+}
+
+/* Numbers */
+*[objectName*="keyNumBtn"] { 
+    background-color: #4f7e70;
+  color: white;
+}
+
+/* backspace, tab, clear */
 *[objectName*="keyFastBtn"] {
-    background-color: #FF9800;
+    background-color: #4f627e;
     color: white;
 }
 
-/* Dollar presets: $10 $50 $100 */
+/* ENTER key */
+#keyFastBtnenter { 
+  background-color: #4f7e53;
+  color: white;
+}
+
+/* $10 $50 $100 */
 *[objectName*="keyDolBtn"] {
-    background-color: #455A64;
-    color: white;
+    background-color: #7e4f79;
+  color: white;
+}
+
+#keypadFrame #keyRefundBtn, 
+#keypadFrame #keyVendorBtn {
+    min-height: 180px;
+    max-height: 180px;
+}
+
+#keyRefundBtn  { 
+  background-color: #a3aebd;
+}
+
+#keyVendorBtn { 
+  background-color: #919eb0;
 }
 
 /* =============================================================
