--- a/Project/assets/main.qss
+++ b/Project/assets/main.qss
@@ -109,17 +109,36 @@ QPushButton#voucherPaySlcBtn:pressed { background-color: #b89628; }
 
 
 /* 5. Operation buttons */
-#payPayOpsBtn    { background-color: #4CAF50; color: white; font-Size: 18px;}  
-#printPayOpsBtn  { background-color: #2196F3; color: white; font-Size: 18px; } 
-#resetPayOpsBtn  { background-color: #F44336; color: white; font-Size: 18px; }
 
 #payPayOpsBtn, #printPayOpsBtn, #resetPayOpsBtn {
+    color: white;
+    font-size: 18px;
+    border-radius: 8px;
+    border: 1px solid transparent; /* Forces custom styling engine */
     min-width: 130px;
     min-height: 80px;
-    max-width: 130px;
-    max-height: 80px;
-    border-radius: 8px;
 }
+
+#payPayOpsBtn   { background-color: #4CAF50; }
+#printPayOpsBtn { background-color: #2196F3; }
+#resetPayOpsBtn { background-color: #F44336; }
+
+#payPayOpsBtn:hover   { background-color: #ecf4ed; }
+#printPayOpsBtn:hover   { background-color: #f0f2f4; }
+#resetPayOpsBtn:hover   { background-color: #faf7f7; }
+
+#payPayOpsBtn:pressed { background-color: #051006; }
+#printPayOpsBtn:pressed { background-color: #0d1319; }
+#resetPayOpsBtn:pressed { background-color: #140909; }
+
+/*
+#payPayOpsBtn:hover   { background-color: #66BB6A; }
+#printPayOpsBtn:hover   { background-color: #42A5F5; }
+#resetPayOpsBtn:hover   { background-color: #EF5350; }
+
+#payPayOpsBtn:pressed { background-color: #388E3C; }
+#printPayOpsBtn:pressed { background-color: #1976D2; }
+#resetPayOpsBtn:pressed { background-color: #D32F2F; } */
 
 /* 6. tender */
 
