--- a/Project/ui/clear_cart.ui
+++ b/Project/ui/clear_cart.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CancelSaleDialog</class>
- <widget class="QDialog" name="CancelSaleDialog">
+ <class>ClearCartDialog</class>
+ <widget class="QDialog" name="ClearCartDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
