--- a/Project/ui/hold_sales.ui
+++ b/Project/ui/hold_sales.ui
@@ -139,7 +139,17 @@
       <number>20</number>
      </property>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="holdSalesNoteLineEdit"/>
+      <widget class="QLineEdit" name="holdSalesNoteLineEdit">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>-- Optional --</string>
+       </property>
+      </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="holdSalesCustomerLineEdit">
@@ -285,6 +295,7 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>holdSalesNoteLineEdit</tabstop>
   <tabstop>btnHoldSalesOk</tabstop>
   <tabstop>btnHoldSalesCancel</tabstop>
   <tabstop>customCloseBtn</tabstop>
