--- a/Project/ui/hold_sales.ui
+++ b/Project/ui/hold_sales.ui
@@ -160,7 +160,7 @@
         </size>
        </property>
        <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
+        <enum>Qt::StrongFocus</enum>
        </property>
        <property name="text">
         <string/>
@@ -295,6 +295,7 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>holdSalesCustomerLineEdit</tabstop>
   <tabstop>holdSalesNoteLineEdit</tabstop>
   <tabstop>btnHoldSalesOk</tabstop>
   <tabstop>btnHoldSalesCancel</tabstop>
